--- a/大二上/数据结构/数据结与算法分析.md
+++ b/大二上/数据结构/数据结与算法分析.md
@@ -107,7 +107,7 @@
 
 #### 1.2.3数据类型和抽象数据类型
 
-数据类型的作用
+##### 数据类型的作用
 
 	* 约束变量或者常量的取值范围
 	* 约束变量或者常量的操作
@@ -118,14 +118,14 @@
 
   **数据类型=值的集合+值集合上的这一组操作**
 
-抽象数据类型（Abstract Data Type）
+##### 抽象数据类型（Abstract Data Type）
 
 * **定义**  	一个数学模型以及定义在此数学模型上的一组操作
   * 抽象出数据模型（**逻辑结构**）
   * 定义在数据模型上的 一组 ** 抽象运算**（相关操作）
   * 不考虑计算机内的具体存储结构 与运算的具体实现
 
-抽象数据类型的**形式定义**
+##### 抽象数据类型的**形式定义**
 
 >抽象数据类型可用（D，S，P）
 >
@@ -147,14 +147,88 @@
   * 初始条件（初始条件描述）
   * 操作结果（操作结果描述）
 
-**基本操作定义格式说明**
+##### **基本操作定义格式说明**
 
 * **参数表：**
   * 赋值参数  ：职位提供操作提供输入值
-  * 引用参数： 以&大头，除了可以体用输入值外，话可以返回操作结果
+  * 引用参数： 以&打头，除了可以提供输入值外，还可以返回操作结果
 
-* **初始条件**：描述执行操作之前数据结构和参数应当满足的条件，加入不满足，操作失败，并且返回出错信息。若初始条件为空则忽略
+* **初始条件**：描述执行操作之前  数据结构和参数应当满足的条件，假如不满足，操作失败，并且返回出 错信息。若初始条件为空则忽略
 * 操作结果： 说明操作正常完成后，**数据结构的变化状况**和应**返回的结果**
 * 
 
-![抽象数据类型ADT](D:\University\大二上\数据结构\asstes\Snipaste_2022-08-29_21-03-59抽象数据类型定义实例.png)
+<img src="D:\University\大二上\数据结构\asstes\Snipaste_2022-08-29_21-03-59抽象数据类型定义实例.png" alt="抽象数据类型ADT" style="zoom:67%;" />
+
+##### 概念小结
+
+![概念小结](D:\University\大二上\数据结构\asstes\Snipaste_2022-08-30_15-41-37概念小结.png)
+
+### 1.3实现抽象数据类型，“复数的实现”
+
+### 1.4算法和算法分析
+
+算法的定义 ：对待特定的问题的 **求解方法和步骤**的一种描述， 他是 **指令**有限 **的 序列**
+
+##### 算法的描述
+
+* 自然语言
+* 流程图： 传统流程图、NS流程图
+* 伪代码
+* 程序
+
+##### 算法与程序
+
+* 算法是解决问题的 一种方法或者一个过程，考虑如何将输入转换为输出，可以有多个
+* 程序是使用某种程序设计语言对算法的实现
+
+##### **算法的特性**： 一个算法必须具有的五个重要**特性**
+
+1. **有穷性： ** 一个算法必须在有穷的步骤之后结束，切每一步都在有穷的时间内。
+2. **确定性：**每一条指令必须具有确切的含义，没有歧义！有位移的执行路径，即对形同的输入只能得到 相同的输出。
+3. **可行性：**算法是可以执行的，算法面搜狐的操作可以通过已经实现的基本操作执行有限次来实现。
+4. 输入：有**<font color="red">零个</font>**或者多个输入。
+5. 输出： 有一个或者多
+
+##### 算法设计的要求
+
+正确性：
+
+- 对于 典型、苛刻 切带有刁难性的机组数据任然满足要求。
+
+可读性： 
+
+- 便与人类阅读
+- 晦涩难懂的算法已于隐藏 较多的错误
+
+健壮性：
+
+- 在输入 **非法数据的时间**，算法恰当的反应或者进行相应的处理。
+- **处理错误的方法，不是中断算法，而是返回一个表示错误的信息**
+
+高效性：
+
+- 时间短，存储少
+
+##### 算法好坏的分析（算法效率）
+
+- 时间效率：消耗的时间
+- 空间效率： 执行过程中锁消耗的存储空间
+- 算法时间效率的度量
+  - 事前分析法：假设执行每一条语句所需的时间为单位时间。此时对于算法的运行时间准换为 讨论该算法中国所有语句执行的次数，**即频度之和**
+
+##### 算法时间复杂度的渐进表示法
+
+* T1(n)=10 n^2   与   T2(n)=5 n^3
+
+* 辅助函数 f(n),使得当N 取景于武器哦哦给你打的时间，T(n)/f(n)的极限值 **为不等于0的常数**，称  f（n）是T（n）的同量级函数。记作T（n）=O（f（n）），称O（f（n））为算法的渐进时间复杂度 ，**简称时间复杂度。**
+
+  <img src="D:\University\大二上\数据结构\asstes\Snipaste_2022-08-30_17-05-50渐进时间复杂度.png" alt="渐进时间复杂度" style="zoom:67%;" />
+
+- 算法中 **基本语句重复执行的次数** **问题规模n**的某个函数f（N），算法的市价度量记作：T（n）=O(f（n）)
+
+<img src="D:\University\大二上\数据结构\asstes\Snipaste_2022-08-30_17-45-42时间复杂度的定义.png" style="zoom:50%;" />
+
+<img src="D:\University\大二上\数据结构\asstes\Snipaste_2022-08-30_17-46-23时间复杂度n.png" style="zoom: 50%;" />
+
+
+
