线性表的实现

--- a/大二上/数据结构/数据结与算法分析.md
+++ b/大二上/数据结构/数据结与算法分析.md
@@ -42,7 +42,7 @@
 #### 1.2.2   数据结构
 
 * 数据元素不是孤立的，他们手指间的某种关系 **数据元素相互之间的关系成为 ##结构（Structure）##**
-* 指 ** 相互之间存在一种护着多种特定关系的**数据元素的集合
+* 指 **相互之间存在一种护着多种特定关系的**数据元素的集合
 
 *  数据结构是 **带结构的** 数据元素的集合
 
@@ -73,7 +73,7 @@
   * 逻辑结构是数据结构的抽象, 存储结构是数据结构的实现
   * 两者综合起来建立了 **数据元素**之间的结构关系
 
-##### 逻辑结构的种类
+##### 逻辑结构的种类(划分方法)
 
 1. **划分方法一**
    1. 线性结构
@@ -231,4 +231,170 @@
 <img src="D:\University\大二上\数据结构\asstes\Snipaste_2022-08-30_17-46-23时间复杂度n.png" style="zoom: 50%;" />
 
 
+
+##### 分析时间复杂度的基本方法
+
+定理1.1
+
+m次多项式，T（n）=O(f（n）) 且 ，f（n）=n^m
+
+![ ](D:\University\大二上\数据结构\asstes\Snipaste_2022-08-30_19-35-08时间复杂度的基本方法.png)
+
+##### 算法时间复杂度计算
+
+###### **注意**：
+
+ 有的情况之下，算法中基本操作重复执行的次数还会随着问题的 **输入**， **数据集** 不同二不同
+
+> **顺序查找方法**
+>
+> ```C
+> for(int i=0;i<n;i++){
+> 	if(a[i]==e)
+> 		 return i+1;//找到，则返回元素的index对象（内存）。
+>  return 0
+> }
+> ```
+>
+> * 最坏的时间复杂度：
+> * 平均时间复杂度： 所有可能的实例中 在等概率出现的情况之下，算法的期望运行时间
+>
+> 
+>
+> 
+
+##### 算法时间复杂度
+
+* ###### 对于复杂的算法，可以将他分为几个简单的步伐 
+
+  * 加法规则：O（Max（f（n），g（n））
+  * 乘法规则：O（f（n）*g（n））
+
+* 算法的时间效率比较
+
+* <img src="D:\University\大二上\数据结构\asstes\Snipaste_2022-08-31_09-51-02时间复杂度效率比较.png" style="zoom:60%;" />
+
+##### 渐进空间复杂度
+
+* 空间复杂度： 算法所存储的空间的度量
+* 算法占据的空间
+  * 本身占据的空间，输入、输出、指令，常量，变量
+  * 算法使用的 **辅助空间**
+
+## 第二章 线性表
+
+### 2.1线性表的定义和特点
+
+* 线性表:是具有 **相同特性**的数据元素的 一个 **有限序列**
+  * 下标是从一开始的
+* 线性表的逻辑特征
+  * 有且只有有一个开始结点 $a_1$,没有直接前驱,而仅有一个直接后继 $a_2$.
+  * 有且只有一个终端结点  $a_n$,没有直接后继,仅有一个直接前驱$a_{n-1}$
+  * 其他的内部结点 $a_i (2<=i<=n-1)$ 都有且只有一个直接前驱$a_{i-1}$ 和一个直接后继$a_{i+1}$
+
+### 2.2 案例引入
+
+#### 案例2.1 一元多项式的运算:实现 两个多项式的 加 \ 减 \乘 \ 除
+
+$$
+R_n(x)=P_n(x)+Q_m(X) 多项式\\
+线性表R=(p_0+q_0+p_1+q_2+p_3+q_3+p_4+q_4+...)
+$$
+
+#### 稀疏多项式的运算
+
+线性表$ A=((7,0),(3,1),(2,5),(5,17))$
+
+线性表$B=((0,4),(2,4),(3,4))$
+
+* 创建一个 **新的数组C**
+* 分别重头遍历 比较a和b 的每一项
+  * **指数相同:** 对应的系数相加,若其和不为零的时间,则在c中增加一个新项
+  * **指数不同 :** 则将指数较小的项复制到c中
+* 在一个多项式已经历便完毕时.将另外一个的剩余项 一次复制到 c中即可.
+
+#####  总结
+
+* 数据元素的类型可以是 简单类型,也可以是 复杂类型.
+* 许多时机问题锁涉猎的基本操作 有很大的 相似性 ,不应该为每一个具体应用 单独编写一个程序
+* 从具体应用中 抽象出共性的 **逻辑结构和基本操作**(**抽象数据类型**) ,然后去实现他的 **存储结构和基本操作**
+
+### 2.3 抽象数据类型的定义
+
+>ADT List{
+>
+> **数据对象**:D= {a; | a;属于Elemset, (i=1,2,...,n, n≥0)}
+>
+>**数据关系**:R={<aj.1,a; > la-1,a;属于D, (i=2,3….,n)}
+>
+>**基本操作:** InitList(&L); DestroyList(&L);
+>ListInsert(&L,ie): ListDelete(8L,i,&e);
+>...等等
+>
+>}ADT
+>
+>
+
+##### 基本操作(一)
+
+* InitList(&L)
+  * 操作结果:构造一个空的线性表L. 
+* DestroyList(&L)
+  * 初始条件: 线性表存在
+  * 操作结果: 销毁线性表L
+* ClearList(&L)
+  * 初始条件: 线性表已经存在 
+  * 操作结果: 将线性表L置为空
+
+
+
+##### 基本操作(二)
+
+* ListEmoty(L)
+  * 初始条件: 线性表已存在.
+  * 操作结果: 若线性表L为空,返回 true: 否则返回false
+* LsitLength(L)
+  * 初始条件:线性表已存在.
+  * 操作结果: 返回线性表L的数据元素的个数
+
+##### 基本操作(三)
+
+* GetElem(L,i,&e)
+  * 初始条件: 线性表已经存在 ,$1<=i<=ListLength(L)$
+  * 操作结果: 用e 来返回线性表L 中的第 i 个数据元素的数值.
+
+##### 基本操作(四)
+
+* LocateElem(L,e,compare())
+  * 初始条件: 线性表已经存在,compare()是数据元素判定的函数
+  * 操作结果: L返回第一个与e满足compare()的数据元素的位序.如果这样的数据不存在的时间,返回0.
+* PriporElem(L,cur_e,&pre_e)
+  * 初始条件: 线性表已经存在
+  * 操作结果: 若cur_e是L 的数据元素,并且不是第一个的时间,则用pre_e 返回他的前驱,否则操作失败: pre_e无意义.
+
+##### 基本操作(五)
+
+* NextElem(L,cur_e,&next_e)
+  * 初始条件: 线性表已经存在.
+  * 操作结果L:若cur_e是L的数据元素,且 不是最后一个,则用next_e 返回他的后继元素.否则操作失败,则next_e无意义.
+* ListInster(&L,i,e)
+  * 初始条件: 线性表存在,1<=i<=ListLength()+1;
+  * 操作结果: 在L的第 i 个位置之前插入新的数据元素e,L的长度增加 1
+
+##### 基本操作(六)
+
+* ListDelete(&L,i,&e)
+  * 初始条件: 线性表存在,1<=i<=ListLength(L).
+  * 操作结果: 删除L的底i个元素,并且用e返回,L的长度减一
+* ListTraverse(&L,visited())
+  * 初始条件:存在线性表
+  * 操作结果: 字词对线性表的每个元速调用 visited()
+
+### 2.4 线性表的顺表示和实现1
+
+* 线性表的顺序表示 又叫为 **顺序存储结构** 或者 **顺序映像**
+* **顺序存储结构** 定义: 把逻辑上相邻的数据元素存储在 物理上相邻的存储单元中 的存储结构
+* 顺序表的优点: **以物理位置相邻表示逻辑关系,任一元素均续集存取**
+
+#### 2.4.1 顺序表的顺序存储表示
 
