--- a/大二上/数据结构/数据结与算法分析.md
+++ b/大二上/数据结构/数据结与算法分析.md
@@ -287,7 +287,7 @@ m次多项式，T（n）=O(f（n）) 且 ，f（n）=n^m
 
 * 线性表:是具有 **相同特性**的数据元素的 一个 **有限序列**
   * 下标是从一开始的
-* 线性表的逻辑特征
+* **线性表的逻辑特征**
   * 有且只有有一个开始结点 $a_1$,没有直接前驱,而仅有一个直接后继 $a_2$.
   * 有且只有一个终端结点  $a_n$,没有直接后继,仅有一个直接前驱$a_{n-1}$
   * 其他的内部结点 $a_i (2<=i<=n-1)$ 都有且只有一个直接前驱$a_{i-1}$ 和一个直接后继$a_{i+1}$
