--- a/大二上/工程概论/20228.29第一课.md
+++ b/大二上/工程概论/20228.29第一课.md
@@ -114,3 +114,42 @@
   * 项目发起人对仙姑完成情况的认可
 
 ![项目挂你生命周期](D:\University\大二上\工程概论\assets\Snipaste_2022-09-05_09-06-33项目管理生命周期.png)
+
+## 第五讲 项目风险管理的额重要性
+
+* 项目风险管理
+* 风险可以是积极的
+* RISk Utility
+* 风险效用 或者 风险承受力 
+* 计划风险管理
+  * 这个过程的主要输出hi一个风险管理计划:
+* 方法论 角色和责任 预算和进度 风险种类 风险改路与影响 改进后的干系人环绕承受度  跟踪 风险文件
+* 应急措施
+  * 是指如果所识别的风险时间发生,项目团队将会采取的欲仙设定的措施..
+* 退路计划
+  * 是对项目目标的完成具有很大影响的风险编制的计划,如果降低风险分措施无效将实施这个计划.
+* 应急储备金
+* 管理储备金 的持有用于控制位置的风险
+
+### 识别风险
+
+* 识别风险是理解那些潜在事件可能损害或 增强 某个特定的项目的过程.
+* 定义风险的另一个 考量来自于提前发现的可能性, 他们是羡慕群集而不是项目集
+* 风险识别工具和技术包括
+  * 头脑风暴
+  * 德尔菲技术
+  * 访谈
+  * 优势 劣势 机会 和威胁分析
+
+### 德尔菲技术
+
+* 德尔菲技术的基本概念是从一组预测未来发展的专家中得到 的一致 的意见.
+* 他是基于独立的 匿名的对未来时间 进行预测的输入. 是一种系统的. 交互式的预测过程
+* 使用反复的提问和书面答复, 避免在口头方法中课可 能产生偏见效应, 例如头脑风暴
+
+### 风险响应计划
+
+* 在识别和讲话风险计划之后, 你必须决定如何应对它们
+* 扶风县的四大应对策略
+  * 风险规避	
+  * 
