--- a/大二上/数据结构/数据结与算法分析.md
+++ b/大二上/数据结构/数据结与算法分析.md
@@ -398,3 +398,124 @@ $$
 
 #### 2.4.1 顺序表的顺序存储表示
 
+### 2.5线性表的链式存储结构
+
+#### 2.5.1 链表的基本运算
+
+1. 建表运算
+
+   * 头插法（带头节点，不带头结点）
+
+   * 尾插法(带头结点的,不带头结点的)
+
+2. 插入结点运算
+
+   * 前插法
+
+   * 后插法
+
+3. 删除结点运算
+
+   * 以及值删除
+
+4. 查找运算
+
+   - 按值查找
+   - 按照序号查找
+
+## 第三章
+
+### 3.1 栈和队列的定义和特点
+
+* 栈和队列是两种常用、重要的额数据结构
+* 湛河队列只是限定插入和删除 只能在 表的“端点” 进行的线性表。
+  * 栈和队列是限定的线性表 
+
+#### 3.1.1 栈的定义和特点
+
+#### 3.1.2 栈的链式存储结构 ------链栈
+
+定义：是运算受限 的 单链表， 其插入和删除操作仅仅在表头进行
+
+```C
+typedef char datatype;
+typedef struct noode{
+	dataType data;
+	struct node * next;
+}linkStack,*PLinkStack;
+
+PLinkStack Top;
+	
+```
+
+##### 链栈 的运算：
+
+* 带头结点和不带头结点的两种
+
+  * 带有头结点 
+
+    ```C
+    LinkStack * init Stack(){
+        LinkStack * Top;
+        Top=(LinkStack *) malloc(sizeof(LinkStack));
+        Top->next=NULL;
+        return Top;
+    }
+    ```
+
+  * 不  带头结点的 栈的初始化
+
+    ```c
+    LinkStack *ininStack(){
+        LinkStack * Top;
+        Top = NULL;
+        return Top;
+    } 
+    
+    ```
+
+  
+
+### 3.2队列
+
+#### 队列的特点：
+
+1. 只允许在顺序表的一端进行删除操作，在标的另外一端进行插入操作的特殊线性表。
+2. 队尾（rear）：可以进行插入操作的一端
+3. 队头（front）：可以进行删除操作的一端。
+4. 特点：先进先出（FIFO）。
+
+#### 队列的基本运算
+
+* InitQueue(  ):初始化队列。 
+* SetnullQS (Q): 置Q为一个空队列，即清空队列。
+* EmptyQS(Q): 判队列Q是否为空队列。当Q是空队列时返回“真”值，否则返回“假”值。
+* LengthQS(Q）：求队列长度，返回队列中元素个数。
+* **GetfrontQS (Q): 取队列Q的队头元素，队列中元素保持不变。**
+* EnQueueQS (Q,X): 将元素X插入队列Q的队尾。简称入队(列)。
+* DeQueueQS (Q): 删除队列Q的队头元素，简称出队(列)。函数返回原队头元素。
+
+##### 注意：在本书中约定非空队列的 front指针指向队头元素的前一个元素，队尾指针 rear 指向对位元素的位置。！
+
+#### 假上溢: 在顺序队列中出现的问题。
+
+##### 解决方案
+
+1. 顺序队列改造为换装，形成 **循环队列。**牺牲一个存储单元来判断队列中 队列为man， 和空队列的情况。
+
+   * 判断 队满的 条件： **(sq->rear+1)%(maxSize)==sq->front**
+
+     ![循环队列满队的情况](./asstes/%E5%BE%AA%E7%8E%AF%E9%98%9F%E5%88%97%20%E6%BB%A1%E9%98%9F%E7%9A%84%E6%83%85%E5%86%B5Snipaste_2022-10-15_09-52-04.png)
+
+   * 判断队空的条件：sq->rear==sq->front
+
+2. 链队列
+
+#### 循环队列基本运算的实现
+
+1. 初始化
+
+   ```C
+   ```
+
+2. 
